Asgm-4.1/src/main/mt22/parser/.antlr/MT22Parser.py
# Generated from /home/thanhdxn/Documents/222/PPL_Doc/Asgm-4.1/src/main/mt22/parser/MT22.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class MT22Parser ( Parser ):

    grammarFileName = "MT22.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "'auto'", "'integer'", 
                     "'void'", "'array'", "'break'", "'float'", "'return'", 
                     "'out'", "'boolean'", "'for'", "'string'", "'continue'", 
                     "'do'", "'function'", "'of'", "'else'", "'if'", "'while'", 
                     "'inherit'", "'readInteger'", "'printInteger'", "'readFloat'", 
                     "'printFloat'", "'readBoolean'", "'printBoolean'", 
                     "'readString'", "'printString'", "'super'", "'preventDefault'", 
                     "'::'", "'+'", "'-'", "'*'", "'/'", "'%'", "'!'", "'&&'", 
                     "'||'", "'=='", "'='", "'!='", "'<'", "'>'", "'<='", 
                     "'>='", "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "';'", "','", "'['", "']'", "'('", "')'", 
                     "'{'", "'}'", "'.'", "':'" ]

    symbolicNames = [ "<INVALID>", "BLOCK_COMMENT", "LINE_COMMENT", "AUTO", 
                      "INT", "VOID", "ARRAY", "BREAK", "FLOAT", "RETURN", 
                      "OUT", "BOOL", "FOR", "STR", "CONTINUE", "DO", "FUNCT", 
                      "OF", "ELSE", "IF", "WHILE", "INHERIT", "READ_INT", 
                      "PRINT_INT", "READ_FLOAT", "PRINT_FLOAT", "READ_BOOL", 
                      "PRINT_BOOL", "READ_STR", "PRINT_STR", "SUPER_FUNC", 
                      "PREVENT_DEFAUT", "OP_STR_CONCAT", "OP_ADD", "OP_MINUS", 
                      "OP_MUL", "OP_DIV", "OP_MOD", "OP_NOT", "OP_AND", 
                      "OP_OR", "OP_EQ_EQ", "OP_EQ", "OP_INEQ", "OP_LESS", 
                      "OP_GREATER", "OP_LESS_OR_EQ", "OP_GREA_OR_EQ", "BOOLLIT", 
                      "ID", "FLOATLIT", "INTLIT", "STRINGLIT", "SEMI", "COMMA", 
                      "LC", "RC", "LB", "RB", "LP", "RP", "DOT", "COLON", 
                      "WS", "ERROR_CHAR", "ILLEGAL_ESCAPE", "ULLEGAL_ESCAPE" ]

    RULE_program = 0
    RULE_decl = 1
    RULE_funcdecl = 2
    RULE_body = 3
    RULE_vardecl = 4
    RULE_var_shortform = 5
    RULE_var_fullform = 6
    RULE_base = 7
    RULE_helpper = 8
    RULE_paramlist = 9
    RULE_paramprime = 10
    RULE_param = 11
    RULE_param_typ = 12
    RULE_func_return_type = 13
    RULE_logic_op = 14
    RULE_relation_op = 15
    RULE_exprlist = 16
    RULE_exprprime = 17
    RULE_nonempty_exprlist = 18
    RULE_expr = 19
    RULE_str_operands = 20
    RULE_int_expr = 21
    RULE_int_term1 = 22
    RULE_int_term2 = 23
    RULE_int_term3 = 24
    RULE_int_term4 = 25
    RULE_int_term5 = 26
    RULE_int_term6 = 27
    RULE_int_term7 = 28
    RULE_subexpr = 29
    RULE_special_func_read_expr = 30
    RULE_special_func_print_expr = 31
    RULE_special_func_super_expr = 32
    RULE_special_func_callstmt = 33
    RULE_specialfunc_read = 34
    RULE_specialfunc_print = 35
    RULE_specialfunc_super = 36
    RULE_callexpr = 37
    RULE_stmtslist = 38
    RULE_stmtprime = 39
    RULE_stmts = 40
    RULE_stmt = 41
    RULE_assign_stmt = 42
    RULE_if_stmt = 43
    RULE_for_stmt = 44
    RULE_init_expr = 45
    RULE_cond_expr = 46
    RULE_update_expr = 47
    RULE_while_stmt = 48
    RULE_do_while_stmt = 49
    RULE_break_stmt = 50
    RULE_continue_stmt = 51
    RULE_return_stmt = 52
    RULE_call_stmt = 53
    RULE_block_stmt = 54
    RULE_arraylit = 55
    RULE_array_type = 56
    RULE_dimension_list = 57
    RULE_atomic_type = 58
    RULE_idlist = 59

    ruleNames =  [ "program", "decl", "funcdecl", "body", "vardecl", "var_shortform", 
                   "var_fullform", "base", "helpper", "paramlist", "paramprime", 
                   "param", "param_typ", "func_return_type", "logic_op", 
                   "relation_op", "exprlist", "exprprime", "nonempty_exprlist", 
                   "expr", "str_operands", "int_expr", "int_term1", "int_term2", 
                   "int_term3", "int_term4", "int_term5", "int_term6", "int_term7", 
                   "subexpr", "special_func_read_expr", "special_func_print_expr", 
                   "special_func_super_expr", "special_func_callstmt", "specialfunc_read", 
                   "specialfunc_print", "specialfunc_super", "callexpr", 
                   "stmtslist", "stmtprime", "stmts", "stmt", "assign_stmt", 
                   "if_stmt", "for_stmt", "init_expr", "cond_expr", "update_expr", 
                   "while_stmt", "do_while_stmt", "break_stmt", "continue_stmt", 
                   "return_stmt", "call_stmt", "block_stmt", "arraylit", 
                   "array_type", "dimension_list", "atomic_type", "idlist" ]

    EOF = Token.EOF
    BLOCK_COMMENT=1
    LINE_COMMENT=2
    AUTO=3
    INT=4
    VOID=5
    ARRAY=6
    BREAK=7
    FLOAT=8
    RETURN=9
    OUT=10
    BOOL=11
    FOR=12
    STR=13
    CONTINUE=14
    DO=15
    FUNCT=16
    OF=17
    ELSE=18
    IF=19
    WHILE=20
    INHERIT=21
    READ_INT=22
    PRINT_INT=23
    READ_FLOAT=24
    PRINT_FLOAT=25
    READ_BOOL=26
    PRINT_BOOL=27
    READ_STR=28
    PRINT_STR=29
    SUPER_FUNC=30
    PREVENT_DEFAUT=31
    OP_STR_CONCAT=32
    OP_ADD=33
    OP_MINUS=34
    OP_MUL=35
    OP_DIV=36
    OP_MOD=37
    OP_NOT=38
    OP_AND=39
    OP_OR=40
    OP_EQ_EQ=41
    OP_EQ=42
    OP_INEQ=43
    OP_LESS=44
    OP_GREATER=45
    OP_LESS_OR_EQ=46
    OP_GREA_OR_EQ=47
    BOOLLIT=48
    ID=49
    FLOATLIT=50
    INTLIT=51
    STRINGLIT=52
    SEMI=53
    COMMA=54
    LC=55
    RC=56
    LB=57
    RB=58
    LP=59
    RP=60
    DOT=61
    COLON=62
    WS=63
    ERROR_CHAR=64
    ILLEGAL_ESCAPE=65
    ULLEGAL_ESCAPE=66

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decl(self):
            return self.getTypedRuleContext(MT22Parser.DeclContext,0)


        def EOF(self):
            return self.getToken(MT22Parser.EOF, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_program




    def program(self):

        localctx = MT22Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self.decl()
            self.state = 121
            self.match(MT22Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decl(self):
            return self.getTypedRuleContext(MT22Parser.DeclContext,0)


        def funcdecl(self):
            return self.getTypedRuleContext(MT22Parser.FuncdeclContext,0)


        def vardecl(self):
            return self.getTypedRuleContext(MT22Parser.VardeclContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_decl




    def decl(self):

        localctx = MT22Parser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_decl)
        try:
            self.state = 130
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 125
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
                if la_ == 1:
                    self.state = 123
                    self.funcdecl()
                    pass

                elif la_ == 2:
                    self.state = 124
                    self.vardecl()
                    pass


                self.state = 127
                self.decl()
                pass
            elif token in [MT22Parser.EOF]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncdeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.ID)
            else:
                return self.getToken(MT22Parser.ID, i)

        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def FUNCT(self):
            return self.getToken(MT22Parser.FUNCT, 0)

        def func_return_type(self):
            return self.getTypedRuleContext(MT22Parser.Func_return_typeContext,0)


        def LB(self):
            return self.getToken(MT22Parser.LB, 0)

        def paramlist(self):
            return self.getTypedRuleContext(MT22Parser.ParamlistContext,0)


        def RB(self):
            return self.getToken(MT22Parser.RB, 0)

        def body(self):
            return self.getTypedRuleContext(MT22Parser.BodyContext,0)


        def INHERIT(self):
            return self.getToken(MT22Parser.INHERIT, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_funcdecl




    def funcdecl(self):

        localctx = MT22Parser.FuncdeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_funcdecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 132
            self.match(MT22Parser.ID)
            self.state = 133
            self.match(MT22Parser.COLON)
            self.state = 134
            self.match(MT22Parser.FUNCT)
            self.state = 135
            self.func_return_type()
            self.state = 136
            self.match(MT22Parser.LB)
            self.state = 137
            self.paramlist()
            self.state = 138
            self.match(MT22Parser.RB)
            self.state = 141
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MT22Parser.INHERIT:
                self.state = 139
                self.match(MT22Parser.INHERIT)
                self.state = 140
                self.match(MT22Parser.ID)


            self.state = 143
            self.body()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def block_stmt(self):
            return self.getTypedRuleContext(MT22Parser.Block_stmtContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_body




    def body(self):

        localctx = MT22Parser.BodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_body)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 145
            self.block_stmt()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VardeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_shortform(self):
            return self.getTypedRuleContext(MT22Parser.Var_shortformContext,0)


        def var_fullform(self):
            return self.getTypedRuleContext(MT22Parser.Var_fullformContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_vardecl




    def vardecl(self):

        localctx = MT22Parser.VardeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_vardecl)
        try:
            self.state = 149
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 147
                self.var_shortform()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 148
                self.var_fullform()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_shortformContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def idlist(self):
            return self.getTypedRuleContext(MT22Parser.IdlistContext,0)


        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def SEMI(self):
            return self.getToken(MT22Parser.SEMI, 0)

        def atomic_type(self):
            return self.getTypedRuleContext(MT22Parser.Atomic_typeContext,0)


        def AUTO(self):
            return self.getToken(MT22Parser.AUTO, 0)

        def array_type(self):
            return self.getTypedRuleContext(MT22Parser.Array_typeContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_var_shortform




    def var_shortform(self):

        localctx = MT22Parser.Var_shortformContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_var_shortform)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 151
            self.idlist()
            self.state = 152
            self.match(MT22Parser.COLON)
            self.state = 156
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.INT, MT22Parser.FLOAT, MT22Parser.BOOL, MT22Parser.STR]:
                self.state = 153
                self.atomic_type()
                pass
            elif token in [MT22Parser.AUTO]:
                self.state = 154
                self.match(MT22Parser.AUTO)
                pass
            elif token in [MT22Parser.ARRAY]:
                self.state = 155
                self.array_type()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 158
            self.match(MT22Parser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_fullformContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def helpper(self):
            return self.getTypedRuleContext(MT22Parser.HelpperContext,0)


        def SEMI(self):
            return self.getToken(MT22Parser.SEMI, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_var_fullform




    def var_fullform(self):

        localctx = MT22Parser.Var_fullformContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_var_fullform)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 160
            self.helpper()
            self.state = 161
            self.match(MT22Parser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BaseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def OP_EQ(self):
            return self.getToken(MT22Parser.OP_EQ, 0)

        def expr(self):
            return self.getTypedRuleContext(MT22Parser.ExprContext,0)


        def atomic_type(self):
            return self.getTypedRuleContext(MT22Parser.Atomic_typeContext,0)


        def array_type(self):
            return self.getTypedRuleContext(MT22Parser.Array_typeContext,0)


        def AUTO(self):
            return self.getToken(MT22Parser.AUTO, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_base




    def base(self):

        localctx = MT22Parser.BaseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_base)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 163
            self.match(MT22Parser.ID)
            self.state = 164
            self.match(MT22Parser.COLON)
            self.state = 168
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.INT, MT22Parser.FLOAT, MT22Parser.BOOL, MT22Parser.STR]:
                self.state = 165
                self.atomic_type()
                pass
            elif token in [MT22Parser.ARRAY]:
                self.state = 166
                self.array_type()
                pass
            elif token in [MT22Parser.AUTO]:
                self.state = 167
                self.match(MT22Parser.AUTO)
                pass
            else:
                raise NoViableAltException(self)

            self.state = 170
            self.match(MT22Parser.OP_EQ)
            self.state = 171
            self.expr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class HelpperContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.COMMA)
            else:
                return self.getToken(MT22Parser.COMMA, i)

        def helpper(self):
            return self.getTypedRuleContext(MT22Parser.HelpperContext,0)


        def expr(self):
            return self.getTypedRuleContext(MT22Parser.ExprContext,0)


        def base(self):
            return self.getTypedRuleContext(MT22Parser.BaseContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_helpper




    def helpper(self):

        localctx = MT22Parser.HelpperContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_helpper)
        try:
            self.state = 180
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 173
                self.match(MT22Parser.ID)
                self.state = 174
                self.match(MT22Parser.COMMA)
                self.state = 175
                self.helpper()
                self.state = 176
                self.match(MT22Parser.COMMA)
                self.state = 177
                self.expr()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 179
                self.base()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamlistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def paramprime(self):
            return self.getTypedRuleContext(MT22Parser.ParamprimeContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_paramlist




    def paramlist(self):

        localctx = MT22Parser.ParamlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_paramlist)
        try:
            self.state = 184
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.OUT, MT22Parser.INHERIT, MT22Parser.ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 182
                self.paramprime()
                pass
            elif token in [MT22Parser.RB]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamprimeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param(self):
            return self.getTypedRuleContext(MT22Parser.ParamContext,0)


        def COMMA(self):
            return self.getToken(MT22Parser.COMMA, 0)

        def paramprime(self):
            return self.getTypedRuleContext(MT22Parser.ParamprimeContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_paramprime




    def paramprime(self):

        localctx = MT22Parser.ParamprimeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_paramprime)
        try:
            self.state = 191
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 186
                self.param()
                self.state = 187
                self.match(MT22Parser.COMMA)
                self.state = 188
                self.paramprime()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 190
                self.param()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def param_typ(self):
            return self.getTypedRuleContext(MT22Parser.Param_typContext,0)


        def INHERIT(self):
            return self.getToken(MT22Parser.INHERIT, 0)

        def OUT(self):
            return self.getToken(MT22Parser.OUT, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_param




    def param(self):

        localctx = MT22Parser.ParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_param)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 194
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MT22Parser.INHERIT:
                self.state = 193
                self.match(MT22Parser.INHERIT)


            self.state = 197
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MT22Parser.OUT:
                self.state = 196
                self.match(MT22Parser.OUT)


            self.state = 199
            self.match(MT22Parser.ID)
            self.state = 200
            self.match(MT22Parser.COLON)
            self.state = 201
            self.param_typ()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Param_typContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def atomic_type(self):
            return self.getTypedRuleContext(MT22Parser.Atomic_typeContext,0)


        def AUTO(self):
            return self.getToken(MT22Parser.AUTO, 0)

        def array_type(self):
            return self.getTypedRuleContext(MT22Parser.Array_typeContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_param_typ




    def param_typ(self):
